Update AlgorithmGraphColoring.java
better performance